It should work tested only on the organization GET method not the post nor the update (pretty sure the update doesnt work tho) also added a volume to the db to avoid wipe after each rebuild @MathysHaubert If you could pull and check if the getters and the posts works it would be good if not I know what I am doing next week
