# event-api/src/Entity/Room.php
@@ -7,7 +7,7 @@ use Doctrine\Common\Collections\Collection;
 
 #[ORM\Entity]
 #[ORM\Table(name: "Room")]
-class Room
+class Room implements \JsonSerializable
 {
     #[ORM\Id]
     #[ORM\Column(type: "integer")]
@@ -23,8 +23,8 @@ class Room
     #[ORM\OneToMany(targetEntity: "Reservation", mappedBy: "room")]
     private $reservations;
 
-    #[ORM\OneToMany(targetEntity: "Capteurs", mappedBy: "room")]
-    private $capteurs;
+    #[ORM\OneToMany(targetEntity: "Capteur", mappedBy: "room")]
+    private $capteur;
 
     // getters and setters
 
@@ -104,11 +104,11 @@ class Room
 
     /**
      * Get the value of capteurs
-     * @return Capteurs[]|Collection
+     * @return Capteurs[]|Collection|null
      */
-    public function getCapteurs(): Collection
+    public function getCapteur(): Collection | null
     {
-        return $this->capteurs;
+        return $this->capteur ?? null;
     }
 
     /**
@@ -117,7 +117,7 @@ class Room
      */
     public function addCapteur(Capteurs $capteur): void
     {
-        $this->capteurs[] = $capteur;
+        $this->capteur[] = $capteur;
         $capteur->setRoom($this);
     }
 
@@ -127,7 +127,29 @@ class Room
      */
     public function removeCapteur(Capteurs $capteur): void
     {
-        $this->capteurs->removeElement($capteur);
+        $this->capteur->removeElement($capteur);
         $capteur->setRoom(null);
+    }
+
+    public function jsonSerialize()
+    {
+
+        if($this->getCapteur() === null){
+            $capteurs = null;
+        }
+        else{
+            $capteurs = [];
+            foreach ($this->getCapteur() as $capteur) {
+                $capteurs[] = $capteur->getId();
+            }
+        }
+
+        return [
+            'id' => $this->id,
+            'location' => $this->location,
+            'integrated_at' => $this->integrated_at,
+            'reservations' => $this->reservations->getId(),
+            'capteurs' => $capteurs,
+        ];
     }
 }
