# event-api/src/Entity/User.php
@@ -24,7 +24,7 @@ class User implements \JsonSerializable
     private $email;
 
     #[ORM\ManyToOne(targetEntity: "Organization")]
-    #[ORM\JoinColumn(name: "organization_id", referencedColumnName: "id")]
+    #[ORM\JoinColumn(name: "organization_id", referencedColumnName: "id", nullable: true)]
     private $organization;
 
     #[ORM\OneToMany(targetEntity: "ForumMessage", mappedBy: "user")]
@@ -231,6 +231,25 @@ class User implements \JsonSerializable
     {
         $this->role = $role;
         return $this;
+    }
+
+    /**
+     * Get the value of User
+     * @return mixed
+     */
+    public function getUser() : mixed
+    {
+        return [
+            'id' => $this->getId(),
+            'lastConnection' => $this->getLastConnection(),
+            'password' => $this->getPassword(),
+            'email' => $this->getEmail(),
+            'organization' => $this->getOrganization(),
+            'createdAt' => $this->getCreatedAt(),
+            'firstName' => $this->getFirstName(),
+            'lastName' => $this->getLastName(),
+            'role' => $this->getRole(),
+        ];
     }
 
     public function jsonSerialize(): mixed
