# firewall/swagger.yaml
@@ -93,6 +93,7 @@ paths:
             enum:
               - user
               - capteur
+              - capteur_archive
               - forum
               - forum_message
               - organization
@@ -115,6 +116,7 @@ paths:
             enum:
               - user
               - capteur
+              - capteur_archive
               - forum
               - forum_message
               - organization
@@ -124,3 +126,25 @@ paths:
       responses:
         '200':
           description: 'Create the entity'
+components:
+  responses:
+    '200':
+      description: 'Update the entity'
+  parameters:
+    entity:
+      name: entity
+      in: path
+      description: 'Entity name'
+      required: true
+      schema:
+        type: string
+        enum:
+          - user
+          - capteur
+          - capteur_archive
+          - forum
+          - forum_message
+          - organization
+          - reservation
+          - room
+          - status
